# arrow-systems-rip

./: .gitignore  REQUIRED_RUNTIME.md  VALIDATION.md  start-rip-safe.bat
.github/workflows/: ci-baseline.yml
adapter/: README.md  service.py
adapter/tests/: test_api.py
docs/: adapter-service.md  blender-box-mockup-mvp.md  production-readiness-plan.md  runtime-config-logging-contract.md
jsl-sdk/: JslConfigs.xml  JslConfigs.xml.bak_20260309_115643  jobSubmissionLib.h  libJobSubmissionLib.lib
scripts/: rebuild.bat  setup-env.bat  test-print.bat
scripts/blender/: README.md  prepare_assets.py  render_box_mockup.py  run_blender_headless.sh
scripts/blender/examples/: box_job.example.json  box_job.phase2.example.json  box_job.phase3.example.json
src/: CMakeLists.txt  bilevel_converter.cpp  bilevel_converter.h  config.cpp  config.h  direct_tcp_sender.cpp  error_codes.cpp  error_codes.h  gbor_generator.cpp  gbor_generator.h  jsl_wrapper.cpp  jsl_wrapper.h  logger.cpp  logger.h  memjet-rip-direct.cpp  memjet-rip-protocol.cpp  memjet-rip.cpp  memjet-rip.cpp.corrupted_python_backup  pdf_rasterizer.cpp  pdf_rasterizer.h  pes_orchestrator.cpp  pes_orchestrator.cpp.bak_20260309_125344  pes_orchestrator.h  tests_config.cpp  tests_error_codes.cpp  thrift_client.h  thrift_controller_fullcycle.py  utils.cpp  utils.h  xitron_api_sender.cpp
